       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.9 (v2_1_9) on Linux (lb32001) on 9/17/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.9 (v2_1_9) on Linux (lb0170) on 9/17/2007 ==

2007-06-08  Todd Dukes  <tdukes@freescale.com>

	* removed check for gnumake. We start by looking for gmake now.

2007-05-21  Todd Dukes-TDUKES  <tdukes@freescale.com>

	* fixed error in bl-rnumber.init.in - I was setting *cc-options*
	  to a modified version of *cflags*. I should have been modifying
	  *cc-options*
	  
2007-05-17  Brian Kahne  <bkahne@freescale.com>

	* Fixed configure and various Makefiles so that if skribe is not
	present the documentation will not be built.

2007-05-15  Brian Kahne  <bkahne@freescale.com>

	* Perl bindings work on x86_64 now:  -fPIC is added in explicitly
	if we're not building shared libraries.

	* make distcheck now works.  Various paths and stuff were modified
	in order to get this to work.

2007-05-14  Todd Dukes-TDUKES  <tdukes@freescale.com>

	* Tested 64 bit build with bigloo 3.0a-beta14May07. Made a few
	  changes to the configure.ac so that the new major version is
	  recognized.

2007-04-02  Brian Kahne  <bkahne@freescale.com>

	* rnumber_features.h was not being distributed, so the Windows
	build was broken.

	* Added the Microsoft Studio project file to the distribution.

2007-02-23  Brian Kahne  <bkahne@freescale.com>

	* Port to Windows:  Added a Visual project file and various
	ifdef's to get this to compile on Windows.  You should be able to
	check this project out and simply build using the rnumber.

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 
